--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.15",
     "@types/node-cron": "^3.0.7",
+    "@types/swagger-jsdoc": "6.0.0",
+    "@types/swagger-ui-express": "^4.1.3",
     "bcrypt": "^5.1.0",
     "bn.js": "^5.2.1",
     "body-parser": "^1.19.0",
@@ -32,6 +34,8 @@
     "pg-pool": "^3.5.2",
     "pg-query-stream": "^4.2.4",
     "supertest": "^6.3.3",
+    "swagger-jsdoc": "6.0.0",
+    "swagger-ui-express": "^4.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
