Update to docker branch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,12 @@ services:
     build: .
     ports:
       - "7000:7000"
+    links:
+      - db
   db:
     image: "postgres"
     ports:
       - "5431:5432"
     environment:
-      POSTGRES_PASSWORD: "mysecretpassword"
+      POSTGRES_PASSWORD: "1234"
       POSTGRES_USER: "postgres"
